src/main/metadata-excluded/objects/Survey_Result__c.object
<CustomObject>
    <fields>
        <fullName>VehicleModel__c</fullName>
        <description>新车型号</description>
        <label>Vehicle Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleUSvin__c</fullName>
        <description>车架号</description>
        <label>Vehicle USvin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W1_Q1_Name__c</fullName>
        <label>W1 Q1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W1_Q1_Question__c</fullName>
        <label>W1 Q1 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>W1_Q1__c</fullName>
        <inlineHelpText>请问您的全名是***？</inlineHelpText>
        <label>W1 Q1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W1_Q2_Mobile__c</fullName>
        <label>W1 Q2 Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W1_Q2_Question__c</fullName>
        <label>W1 Q2 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>W1_Q2__c</fullName>
        <inlineHelpText>请问您的手机号码是………..吗？</inlineHelpText>
        <label>W1 Q2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W1_Q3_Address__c</fullName>
        <label>W1 Q3 Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W1_Q3_City__c</fullName>
        <label>W1 Q3 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W1_Q3_Province__c</fullName>
        <label>W1 Q3 Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W1_Q3_Question__c</fullName>
        <label>W1 Q3 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>W1_Q3_ZipCode__c</fullName>
        <label>W1 Q3 ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W1_Q3__c</fullName>
        <inlineHelpText>请问您现在的通信地址是**省份**市****吗？邮政编码是***吗？</inlineHelpText>
        <label>W1 Q3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W1_Q4_Email__c</fullName>
        <label>W1 Q4 Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_1_0_Question__c</fullName>
        <label>W 1.0 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>W_1_0__c</fullName>
        <inlineHelpText>您好，我是梅赛德斯-奔驰客户服务中心的XXX。请问您是（客户姓名）先生/女士吗？</inlineHelpText>
        <label>W 1.0</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_2_0_Question__c</fullName>
        <label>W 2.0 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>W_2_0__c</fullName>
        <inlineHelpText>请问您认识--------（客户姓名）吗？</inlineHelpText>
        <label>W 2.0</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_2_1_Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_2_1_Question__c</fullName>
        <label>W 2.1 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>W_2_1__c</fullName>
        <inlineHelpText>请问您方便告诉我（客户姓名）的联系电话吗？</inlineHelpText>
        <label>W 2.1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_2_2_Due_Time__c</fullName>
        <label>W 2.2 Due Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_3_2_Due_Time__c</fullName>
        <label>W 3.2 Due Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_3_3_Due_Time__c</fullName>
        <label>W 3.3 Due Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q13_Family_Number__c</fullName>
        <label>W Q13 Family Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q13_Married_with_Children__c</fullName>
        <label>W Q13 Married with Children</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q13_Married_without_Children__c</fullName>
        <label>W Q13 Married without Children</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q13_Single__c</fullName>
        <label>W Q13 Single</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q14_Hobby__c</fullName>
        <label>W Q14 Hobby</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q15_Education__c</fullName>
        <label>W Q15 Education</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>W_Q16_Employee__c</fullName>
        <inlineHelpText>请问您是政府机关职员、企业管理人员、普通职员、还是自由职业者呢？</inlineHelpText>
        <label>W Q16 Employee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q16_Other__c</fullName>
        <label>W Q16 Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q16_Owner__c</fullName>
        <inlineHelpText>请问您企业的员工是大于10人还是小于10人呢？</inlineHelpText>
        <label>W Q16 Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q17_Age__c</fullName>
        <label>W Q17 Age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q17_Birthday__c</fullName>
        <label>W Q17 Birthday</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q2_Mobile__c</fullName>
        <label>W Q2 Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q3_Address__c</fullName>
        <label>W Q3 Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q3_City__c</fullName>
        <label>W Q3 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q3_Province__c</fullName>
        <label>W Q3 Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q3_ZipCode__c</fullName>
        <label>W Q3 ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q4_Email__c</fullName>
        <label>W Q4 Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q5_Car_Model__c</fullName>
        <label>W Q5 Car Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q5_DealerName__c</fullName>
        <label>W Q5 DealerName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q5_Purchase_Date__c</fullName>
        <label>W Q5 Purchase Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q7_Source__c</fullName>
        <label>W Q7 Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Q7_Sub_Source__c</fullName>
        <label>W Q7 Sub Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_Refer__c</fullName>
        <label>MBDA Will Refer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>smart_SSI_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>smart SSI Record</label>
        <referenceTo>smart_SSI__c</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Result</label>
    <listViews>
        <fullName>All_Monthly_Survey_Result</fullName>
        <columns>NAME</columns>
        <columns>CustomerName__c</columns>
        <columns>CompanyName__c</columns>
        <columns>SSI_Record__c</columns>
        <columns>InvoiceDate__c</columns>
        <columns>Mobile__c</columns>
        <columns>QC_Approved__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>All Monthly Survey Result</label>
        <language>en_US</language>
        <sharedTo>
            <role>SSI_CSR</role>
            <role>SSI_Manager</role>
            <role>SSI_Supervisor</role>
            <role>SSI_TL</role>
            <role>Sinotrust</role>
            <role>Training_SSI</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Welcome_Call_1st_Survey</fullName>
        <columns>NAME</columns>
        <columns>CustomerName__c</columns>
        <columns>CompanyName__c</columns>
        <columns>SSI_Record__c</columns>
        <columns>InvoiceDate__c</columns>
        <columns>Mobile__c</columns>
        <columns>QC_Approved__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Survey_Result__c.Welcome_Call_1st_Survey_Result</value>
        </filters>
        <label>Welcome Call+1st Survey</label>
        <language>en_US</language>
        <sharedTo>
            <role>SSI_CSR</role>
            <role>SSI_Manager</role>
            <role>SSI_Supervisor</role>
            <role>SSI_TL</role>
            <role>Sinotrust</role>
            <role>Training_SSI</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Survey Result No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Results</pluralLabel>
    <recordTypes>
        <fullName>MBDA_Survey_Result</fullName>
        <active>true</active>
        <label>MBDA Survey Result</label>
    </recordTypes>
    <recordTypes>
        <fullName>Welcome_Call_1st_Survey_Result</fullName>
        <active>true</active>
        <label>Welcome Call+1st Survey Result</label>
    </recordTypes>
    <recordTypes>
        <fullName>Welcome_Call_Result</fullName>
        <active>true</active>
        <label>Welcome Call Result</label>
    </recordTypes>
    <recordTypes>
        <fullName>X1st_Survey_Result</fullName>
        <active>true</active>
        <label>1st Survey Result</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2nd_Survey_Result</fullName>
        <active>true</active>
        <label>2nd Survey Result</label>
    </recordTypes>
    <recordTypes>
        <fullName>smart_1st_Survey_Result</fullName>
        <active>true</active>
        <label>smart 1st Survey Result</label>
    </recordTypes>
    <recordTypes>
        <fullName>smart_2nd_Survey_Result</fullName>
        <active>true</active>
        <label>smart 2nd Survey Result</label>
    </recordTypes>
    <recordTypes>
        <fullName>smart_Welcome_Call_1st_Survey_Result</fullName>
        <active>true</active>
        <label>smart Welcome Call+1st Survey Result</label>
    </recordTypes>
    <recordTypes>
        <fullName>smart_Welcome_Call_Result</fullName>
        <active>true</active>
        <label>smart Welcome Call Result</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ApprovedSRCannotBeChanged</fullName>
        <active>true</active>
        <description>Created for:
131115-19
CR-000248</description>
        <errorConditionFormula>AND(
QC_Approved__c  == true,
NOT(ISCHANGED(QC_Approved__c)),
$Profile.Name != &apos;System Administrator&apos;,
$Profile.Name != &apos;BMBS Sinotrust User&apos;,
$Profile.Name != &apos;CAC IT Manager&apos;
)</errorConditionFormula>
        <errorMessage>QC has been approved. You cannot modify survey result anymore.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinishSRCannotBeChanged</fullName>
        <active>true</active>
        <description>Created for:
131115-19
CR-000248</description>
        <errorConditionFormula>AND(
Task_Successful__c == true,
NOT(ISCHANGED(Task_Successful__c )),
NOT(CONTAINS($Profile.Name, &apos;QC&apos;)),
$Profile.Name != &apos;System Administrator&apos;,
$Profile.Name != &apos;CAC IT Manager&apos;
)</errorConditionFormula>
        <errorMessage>SSI Task has been closed. You cannot modify survey result anymore.</errorMessage>
    </validationRules>
</CustomObject>